getting some resonable results

--- a/Test/Code/test.ipynb
+++ b/Test/Code/test.ipynb
@@ -6,26 +6,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def myfunc(s):\n",
-    "  return (s, s+1)"
+    "import time\n",
+    "batch_num = 1\n",
+    "num_of_bathes = len(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'pytorch' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n pytorch ipykernel --update-deps --force-reinstall'"
      ]
     }
    ],
    "source": [
-    "k = myfunc(s=2)\n",
-    "print(k[0])"
+    "\n",
+    "for i in range(10):\n",
+    "  txt = \"Batch \" + f\"{batch_num}/{num_of_bathes}\"\n",
+    "  print(txt, end='\\r')\n",
+    "  time.sleep(1)"
    ]
   }
  ],
@@ -45,7 +52,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
