--- a/Test/Code/time_series.ipynb
+++ b/Test/Code/time_series.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,13 @@
     "import torch \n",
     "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader, TensorDataset\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "#from sklearn.preprocessing import StandardScaler\n",
     "from torch.optim.lr_scheduler import ReduceLROnPlateau"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5076/1229531653.py:3: UserWarning: 'has_mps' is deprecated, please use 'torch.backends.mps.is_built()'\n",
+      "/tmp/ipykernel_1204/1229531653.py:3: UserWarning: 'has_mps' is deprecated, please use 'torch.backends.mps.is_built()'\n",
       "  if getattr(torch, \"has_mps\", False)\n"
      ]
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,18 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(15161, 1)\n",
-      "6391\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -86,19 +77,23 @@
     "df_train = sorted_data[sorted_data['year'] < 2000]\n",
     "df_test = sorted_data[sorted_data['year'] >= 2000]\n",
     "\n",
-    "spots_train = df_train['sn_value'].to_numpy().reshape(-1, 1)\n",
-    "spots_test = df_test['sn_value'].to_numpy().reshape(-1, 1)\n",
-    "print(spots_train.shape)\n",
-    "scaler = StandardScaler()\n",
-    "spots_train = scaler.fit_transform(spots_train).flatten().tolist()\n",
-    "spots_test = scaler.fit_transform(spots_test).flatten().tolist()\n",
-    "print(len(spots_test))\n",
+    "spots_train = df_train['sn_value'].to_numpy().reshape(-1, 1).flatten().tolist()\n",
+    "spots_test = df_test['sn_value'].to_numpy().reshape(-1, 1).flatten().tolist()\n",
+    "# print(spots_train.mean())\n",
+    "# print(spots_train.std())  \n",
+    "# print(spots_train.shape)\n",
+    "# scaler = StandardScaler()\n",
+    "# spots_train = scaler.fit_transform(spots_train).flatten().tolist()\n",
+    "# print(np.asarray(spots_train).mean())\n",
+    "# print(np.asarray(spots_train).std()) \n",
+    "# spots_test = scaler.fit_transform(spots_test).flatten().tolist()\n",
+    "# print(len(spots_test))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +111,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scaler\n",
+    "def scaler(x):\n",
+    "  m = x.mean()\n",
+    "  std = x.std()\n",
+    "  x = (x - m) / std\n",
+    "  return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -131,12 +140,16 @@
     "SEQUENCE_SIZE = 10\n",
     "x_train, y_train = to_sequence(seq_size=SEQUENCE_SIZE, obs=spots_train)\n",
     "x_test, y_test = to_sequence(seq_size=SEQUENCE_SIZE, obs=spots_test)\n",
+    "x_train = scaler(x_train)\n",
+    "x_test = scaler(x_test)\n",
+    "y_train = scaler(y_train)\n",
+    "y_test = scaler(y_test)\n",
     "print(x_train.shape)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,17 +228,20 @@
     "    self.decoder = nn.Linear(d_model, 1)\n",
     "\n",
     "  def forward(self, x):\n",
+    "    # (batch_size (32), seq_len (10) , 1)\n",
     "    x = self.encoder(x)\n",
+    "    # (batch_size, seq_len, d_model)\n",
     "    x = self.pos_encoder(x)\n",
     "    x = self.transformer(x)\n",
-    "    x = self.decoder(x[:, -1, :])\n",
+    "    x = x[:, -1, :]\n",
+    "    x = self.decoder(x)\n",
     "    return x  \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -251,8 +267,6 @@
      "output_type": "stream",
      "text": [
       "/home/hansalin/anaconda3/envs/myenv/lib/python3.8/site-packages/torch/nn/modules/loss.py:535: UserWarning: Using a target size (torch.Size([32, 1, 1])) that is different to the input size (torch.Size([32, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  return F.mse_loss(input, target, reduction=self.reduction)\n",
-      "/home/hansalin/anaconda3/envs/myenv/lib/python3.8/site-packages/torch/nn/modules/loss.py:535: UserWarning: Using a target size (torch.Size([15, 1, 1])) that is different to the input size (torch.Size([15, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  return F.mse_loss(input, target, reduction=self.reduction)\n",
       "/home/hansalin/anaconda3/envs/myenv/lib/python3.8/site-packages/torch/nn/modules/loss.py:535: UserWarning: Using a target size (torch.Size([13, 1, 1])) that is different to the input size (torch.Size([13, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  return F.mse_loss(input, target, reduction=self.reduction)\n"
@@ -262,8 +276,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/2, Training Loss: 0.9763040377243661, Validation Loss: 0.9782\n",
-      "Epoch 2/2, Training Loss: 0.9887852688881918, Validation Loss: 0.9893\n"
+      "Epoch 1/2, Training Loss: 0.9791682106030138, Validation Loss: 0.9784\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hansalin/anaconda3/envs/myenv/lib/python3.8/site-packages/torch/nn/modules/loss.py:535: UserWarning: Using a target size (torch.Size([15, 1, 1])) that is different to the input size (torch.Size([15, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n",
+      "/home/hansalin/anaconda3/envs/myenv/lib/python3.8/site-packages/torch/nn/modules/loss.py:535: UserWarning: Using a target size (torch.Size([32, 1, 1])) that is different to the input size (torch.Size([32, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2/2, Training Loss: 0.9777120517779, Validation Loss: 0.9758\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hansalin/anaconda3/envs/myenv/lib/python3.8/site-packages/torch/nn/modules/loss.py:535: UserWarning: Using a target size (torch.Size([13, 1, 1])) that is different to the input size (torch.Size([13, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
      ]
     }
    ],
