Started to implement learning rate

--- a/Test/Code/time_series.ipynb
+++ b/Test/Code/time_series.ipynb
@@ -2,16 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'pytorch' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n pytorch ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import torch \n",
     "import torch.nn as nn\n",
     "from torch.utils.data import DataLoader, TensorDataset\n",
-    "#from sklearn.preprocessing import StandardScaler\n",
     "from torch.optim.lr_scheduler import ReduceLROnPlateau"
    ]
   },
@@ -471,7 +481,7 @@
     "print(dif.shape)\n",
     "square = dif**2\n",
     "print(square.shape)\n",
-    "mse = np.sqrt(np.mean())\n",
+    "mse = np.sqrt(np.mean(square))\n",
     "print(rmse)"
    ]
   },
@@ -518,7 +528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
