--- a/Test/Code/test.ipynb
+++ b/Test/Code/test.ipynb
@@ -2,13 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import time\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "with open('/home/halin/Master/Transformer/Test/ModelsResults/model_997/config.txt', 'rb') as f:\n",
+    "    data = pickle.load(f)\n",
+    "print()    \n",
+    "# A easier to read part\n",
+    "with open('/home/halin/Master/Transformer/Test/ModelsResults/model_997/text_config.txt', 'w') as f2:\n",
+    "    for key, value in data.items():\n",
+    "        f2.write('%s: %s\\n' % (key, value))"
    ]
   },
   {
@@ -243,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
