--- a/Test/Code/test_test.ipynb
+++ b/Test/Code/test_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +48,30 @@
     "plt.imshow(value, cmap='gray')\n",
     "plt.show()\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n",
+      "[4 3 1 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([3,4,2,1])\n",
+    "b = np.array([1,2,3,4])\n",
+    "a_sorting_index = np.argsort(a)\n",
+    "a_sorted = a[a_sorting_index]\n",
+    "b_sorted = b[a_sorting_index]\n",
+    "print(a_sorted)\n",
+    "print(b_sorted)\n"
    ]
   }
  ],
